Reworking the update profile form. Additional styles and markup to accommodate this.

--- a/public/css/_568px.scss
+++ b/public/css/_568px.scss
@@ -93,3 +93,17 @@ article.property {
     }
   }
 }
+.profileForm {
+  .settingsPanel {
+    .settingsLabel, .settingsContent {
+      float:none;
+      width:100%;
+    }
+    .settingsLabel {
+
+    }
+    .settingsContent {
+      clear:left;
+    }
+  }
+}
