--- a/public/css/_576px.scss
+++ b/public/css/_576px.scss
@@ -26,7 +26,7 @@
     right: 0;
   }
   .admin_nav_toggle {
-    display:block;
+    display:block!important;
     width:30px;
     height:30px;
     text-align: center;
