--- a/public/css/admin.scss
+++ b/public/css/admin.scss
@@ -22,6 +22,7 @@
         visibility: hidden;
         position: absolute;
         background: #333333;
+        border-bottom:3px solid white;
         left: 0;
         list-style: none;
         padding: 0;
