Requesting Google font over https

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Khula:400,800);
+@import url(https://fonts.googleapis.com/css?family=Khula:400,800);
 form {
   border: none; }
   form fieldset {
