--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1912,17 +1912,19 @@ footer {
 
   header .home {
     width: 60px; }
-  header .user_actions button {
-    display: inline-block;
-    width: 45%;
-    margin: 0;
-    float: none; }
-    header .user_actions button:before, header .user_actions button:after {
-      color: #333333;
-      font-size: 1em !important;
-      display: block;
-      width: 100%;
-      height: 100%; }
+  header .user_actions {
+    width: 70%; }
+    header .user_actions button {
+      display: inline-block;
+      width: 45%;
+      margin: 0;
+      float: none; }
+      header .user_actions button:before, header .user_actions button:after {
+        color: #333333;
+        font-size: 1em !important;
+        display: block;
+        width: 100%;
+        height: 100%; }
 
   .ui-dialog.noTitle {
     width: 100%;
@@ -1939,7 +1941,15 @@ footer {
     max-height: 400px; }
     .gorilla .content h1 {
       line-height: 1.2;
+      font-size: 2em;
       margin-bottom: .5em; }
+
+  .promofree .content.full h1, .zerorisk .content.full h1, .simple .content.full h1 {
+    font-size: 3em;
+    margin-bottom: .5em; }
+  .promofree .content.full p, .zerorisk .content.full p, .simple .content.full p {
+    font-size: 1em;
+    letter-spacing: 0px; }
 
   body.home {
     margin: 0; }
