CSS Changes: - added styles for new required field indicators when creating a new rental     - adding a class of 'required' to any label will now automatically generate a red asterisk via css pseudo element - added styles for the note explaining what the red asterisk indicates - minor adjustment to iphone style (firefox emulated iphone view was causing div.avatar to break onto second line)
Markup changes:
- added required class to all appropriate labels on the rental creation form
- added an id of 'active' to the activation checkbox on the same form, enabling the user to click anywhere on the label for that checkbox to toggle the state of the checkbox, since the click / touch target is so small

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,4 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Khula:400,800);
+.requiredNote {
+  font-size: .8em;
+  padding: 1em;
+  display: block;
+  background: #ececec;
+  color: #4A4A4A;
+  margin-bottom: 1em; }
+  .requiredNote strong {
+    color: crimson; }
+
 form {
   border: none; }
   form fieldset {
@@ -21,6 +31,10 @@ form {
       margin-bottom: 1em !important; }
     form label i.fa {
       font-size: 1.5em; }
+  form label.required:before {
+    content: '* ';
+    color: crimson;
+    font-weight: bold; }
 
 form label span {
   font-weight: normal; }
