Removing google api font loading

--- a/public/css/form.scss
+++ b/public/css/form.scss
@@ -2,7 +2,7 @@ $darkbrown:#333333;
 $green:#74B164;
 $brown:#7A694B;
 $darkgray:#4A4A4A;
-@import url(https://fonts.googleapis.com/css?family=Khula:400,800);
+// @import url(https://fonts.googleapis.com/css?family=Khula:400,800);
 .requiredNote {
   font-size:.8em;
   padding:1em;
