--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2187,7 +2187,8 @@ aside.my_properties h3:first-child {
     text-align: center;
     color: white;
     font-size: 5em;
-    margin: .25em auto 1em auto; }
+    margin: .25em auto 1em auto; 
+	font-weight:bold;}
   .gorilla label {
     display: block;
     background: #74b164;
