--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1960,13 +1960,13 @@ footer {
       z-index: 9999 !important; }
 
   .avatar {
-    width: 230px;
+    width: 260px;
     margin: 0;
     z-index: 8999 !important; }
     .avatar img {
       display: none; }
     .avatar .avatar_actions {
-      width: 195px;
+      width: 270px;
       float: right;
       margin: 0; }
       .avatar .avatar_actions a {
@@ -2232,7 +2232,7 @@ aside.my_properties h3:first-child {
   .gorilla .select2-container--default {
     height: 40px; }
     .gorilla .select2-container--default .select2-selection--single {
-      height: 40px; }
+      height: 40px;padding-top:5px; }
 
 #rental-list a {
   color: inherit;
