--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1315,7 +1315,8 @@ span.eyes.blink .eye {
   .avatar .user_name {
     color: white;
     display: block;
-    font-size: 1.1em; }
+    font-size: 1.1em;
+	white-space:nowrap}
     .avatar .user_name a {
       color: white;
       text-decoration: none; }
