--- a/public/css/login.css
+++ b/public/css/login.css
@@ -19,7 +19,8 @@
 .main .loginOnly {
   padding: 1em;
   background: #333333;
-  width: 600px;
+  width:100%;
+  max-width: 600px;
   margin: 1em auto;
   position: relative; }
   .main .loginOnly input {
@@ -87,6 +88,12 @@
 .ui-dialog {
   height: inherit;
   width: inherit; }
+  
+ @media only screen and (max-width: 480px) {
+  .main .loginOnly input[type="submit"]{
+	padding:14px 30px;
+  }
+ }
 
 
 /*# sourceMappingURL=login.css.map */
